Archive2/51/2dc6e74ac63441/output
main.cpp: In function 'int main()':
main.cpp:31:5: error: redefinition of 'int main()'
 int main()
     ^
main.cpp:15:5: note: 'int main()' previously defined here
 int main()
     ^
